pom.xml cleaning
- use properties for versions of each dependencies and plugins
- upgrade to latest version of each dependencies and plugins
- Remove dependencies and plugins that are not used
- Override the application version with the build date
- configure gwt-maven plugin for running GWTTestCase

Change-Id: I953e08a4544f141b6e7c8fb4a0c60dd89efd38b7